clusters/homelab/it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.205
  name: it-tools
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: it-tools
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
